rename the og file ReportService to ReportCardService and some refactorings